First fully working version

--- a/manifest.json
+++ b/manifest.json
@@ -15,6 +15,7 @@
         "storage",
         "activeTab",
         "scripting",
+        "unlimitedStorage",
         "tabs"
     ],
     "host_permissions": [
